[package]
name = "channel-repro"
version = "0.1.0"
authors = ["Luke Steensen <luke.steensen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["sync", "macros", "rt-core", "stream", "time"] }
futures = "0.3.8"
